Bug 22693 - Removing the aiptek module kills Xserver
Summary: Removing the aiptek module kills Xserver
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/aiptek (show other bugs)
Version: 7.4 (2008.09)
Hardware: x86 (IA32) Linux (All)
: medium critical
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-09 16:36 UTC by Jon Nordby
Modified: 2009-09-04 04:49 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
0001-Reset-local-private-to-NULL-after-freeing-it.-22693.patch (842 bytes, patch)
2009-08-18 22:14 UTC, Peter Hutterer
no flags Details | Splinter Review

Description Jon Nordby 2009-07-09 16:36:10 UTC
Experienced with USB device:
08ca:0021 Aiptek International, Inc. APT-2 Tablet

Steps to reproduce:
1) insert tablet
2) rmmod aiptek

Tracebacks and other information avaliable here:
https://bugs.launchpad.net/ubuntu/+source/xserver-xorg-input-aiptek/+bug/355021

As noted, root access to a system exhibiting this behavior can be arranged. Contact me by email.
Comment 1 Jon Nordby 2009-07-16 10:09:37 UTC
Have you been able to reproduce this?  Do you think there is enough information to reproduce the bug and/or solve? 
If not, be sure to let me know what you need.

Known workarounds, if existing, would also be welcomed. Thanks in advance!
Comment 2 Jon Nordby 2009-08-18 11:04:57 UTC
This seems to me to be a fairly trivial issue to fix. So I am personally adding a 30usd bounty for anyone who fixes this in a good way (needs to go upstream). Preferably with a test-case. If this is not trivial, please say so.
Comment 3 Peter Hutterer 2009-08-18 22:14:58 UTC
Created attachment 28772 [details] [review]
0001-Reset-local-private-to-NULL-after-freeing-it.-22693.patch

Can you test this patch please. Seems to be a bug that affects some other input drivers too.
Comment 4 Peter Hutterer 2009-08-25 04:09:01 UTC
Pushed as 3337f41ca5af021fb7ed8db0efc5e39f04e3d012.
Comment 5 Jon Nordby 2009-09-04 04:49:37 UTC
I can confirm that this patch solves the issue. 

I've experienced one crash upon unplugging, but do not know the reason for this or have been able to reproduce. Will update or file a new bug if this happens again and I can find which component that seems to be at fault.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.