Reset local->private to NULL after freeing it. (#22693)

If it's not NULL, xf86DeleteInput will try to free it again.

X.Org Bug 22693 <http://bugs.freedesktop.org/show_bug.cgi?id=22693>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>